--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <details>
+        <h1 align="center">HTML Interview Questions</h1>
         <summary>1). What is HTML?</summary>
         <p>HTML stands for HyperText Markup Language, used to create the structure of web pages.</p>
     </details>
